# AdventOfCode

./: .gitignore  README.md  aoc_day10.py  aoc_day11.py  aoc_day12.py  aoc_day13.py  aoc_day14.py  aoc_day15.py  aoc_day16.py  aoc_day17.py  aoc_day19.py  aoc_day4.py  aoc_day6.py  aoc_day7.py  aoc_day8.py  aoc_day9.py  aoc_day_1.py  aoc_lib.py  justfile  pyproject.toml  requirements.txt
aoc_2015/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_2022/: day1.py  day2.py
aoc_2022/problem_definitions/: day1.md  day2.md
aoc_2023/: aoc_day1.py  aoc_day10.py  aoc_day11.py  aoc_day12.py  aoc_day13.py  aoc_day14.py  aoc_day15.py  aoc_day16.py  aoc_day17.py  aoc_day18.py  aoc_day19.py  aoc_day2.py  aoc_day20.py  aoc_day21.py  aoc_day22.py  aoc_day23.py  aoc_day24.py  aoc_day25.py  aoc_day3.py  aoc_day4.py  aoc_day5.py  aoc_day6.py  aoc_day7.py  aoc_day8.py  aoc_day9.py
aoc_2023/problem_definitions/: day1.md  day2.md  day2.txt  day22.md  day23.md  day24.md  day25.md  day3.md  day4.md  day5.md  day6.md
aoc_2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_2025/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_2025/problem_definitions/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md
aoc_lib/: __init__.py  _template.py  aoc_day19.py  aoc_lib.py  functions.py  grid.py  hashable_dict.py  ranges.py
src/aoc_lib/: functions.py
