[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx==3.2.1",
    "ruff>=0.14.7",
    "sympy==1.13.3",
]

[tool.ruff]
target-version = "py312"
# Allow lines to be as long as 120 characters.
line-length = 120
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # imports
]


lint.ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

exclude = [
]

[[tool.uv.index]]
url = "https://nexus.cloud.aws.tenablesecurity.com/repository/tenable_pypigroup/simple"

[tool.ruff.lint.isort]
known-local-folder = [
  "aoc_lib",
]

[[tool.uv.index]]
url = "https://nexus.cloud.aws.tenablesecurity.com//tenable_pypigroup/pypi"


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

